Using auth in Product and Intake controllers to return user specific data
